<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/conditionIcon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:scaleType="fitXY" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/humidityLabel"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/weather_detail_humidity_prefix"
            android:textColor="@color/text_color"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/humidity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_toRightOf="@+id/humidityLabel"
            android:textColor="@color/text_color"
            android:textSize="16sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/pressureLabel"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/weather_detail_pressure_prefix"
            android:textColor="@color/text_color"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/pressure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_toRightOf="@+id/pressureLabel"
            android:textColor="@color/text_color"
            android:textSize="16sp" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tmaxLabel"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/weather_detail_tmax_prefix"
            android:textColor="@color/text_color"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tmax"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_toRightOf="@+id/tmaxLabel"
            android:textColor="@color/text_color"
            android:textSize="16sp" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tminLabel"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/weather_detail_tmin_prefix"
            android:textColor="@color/text_color"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tmin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_toRightOf="@+id/tminLabel"
            android:textColor="@color/text_color"
            android:textSize="16sp" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/windLabel"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/weather_detail_wind_prefix"
            android:textColor="@color/text_color"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/wind"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_toRightOf="@+id/windLabel"
            android:textColor="@color/text_color"
            android:textSize="16sp" />

    </RelativeLayout>
</LinearLayout>